--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -1,9 +1,6 @@
 {
   "plugins": ["unused-imports"],
-  "extends": [
-    "next/core-web-vitals",
-    "plugin:prettier/recommended"
-  ],
+  "extends": ["next/core-web-vitals", "plugin:prettier/recommended"],
   "rules": {
     "@next/next/no-img-element": "off",
     "prettier/prettier": "off",
