--- a/web/package.json
+++ b/web/package.json
@@ -15,7 +15,10 @@
     "@tailwindcss/forms": "^0.5.7",
     "@upstash/ratelimit": "^1.0.0",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.3",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "fs": "0.0.1-security",
     "headlessui": "^0.0.0",
     "lucide-react": "^0.309.0",
@@ -23,6 +26,7 @@
     "nanoid": "^5.0.4",
     "next": "14.0.4",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
     "tailwind-merge": "^2.2.0",
